task310/src/main/java/com/example/task310/error/ApiError.java
package com.example.task310.error;

public record ApiError(String errorMessage, String errorCode) {}
